@@ -1,11 +1,9 @@
 ulimit -c unlimited
-rm -f /tmp/core
-echo "/tmp/core" > /proc/sys/kernel/core_pattern
 php ./unit-tests/ci/phpunit.php --debug -c unit-tests/phpunit.xml
 STATUS=$?
 if [ $STATUS != 0 ]; then
 	if [ -f /tmp/core ]; then
-		gdb -q -batch -x ./unit-tests/ci/gdb-commands -e php -c /tmp/core
+		gdb -q -batch -x ./unit-tests/ci/gdb-commands -e php -c core
 	else
 		echo "No core dump was generated"
 	fi
