@@ -1,3 +1,3 @@
-[Wed, 15 Aug 12 04:03:48 -0500][DEBUG] SELECT * FROM personas LIMIT 3
-[Wed, 15 Aug 12 04:03:48 -0500][DEBUG] SELECT * FROM personas LIMIT 10
-[Wed, 15 Aug 12 04:03:48 -0500][DEBUG] SELECT * FROM personas LIMIT 1
+[Wed, 15 Aug 12 21:11:15 -0500][DEBUG] SELECT * FROM personas LIMIT 3
+[Wed, 15 Aug 12 21:11:15 -0500][DEBUG] SELECT * FROM personas LIMIT 10
+[Wed, 15 Aug 12 21:11:15 -0500][DEBUG] SELECT * FROM personas LIMIT 1
