@@ -28,6 +28,9 @@
 			<file>unit-tests/RouterTest.php</file>
 			<file>unit-tests/DispatcherTest.php</file>
 
+			<file>unit-tests/CacheTest.php</file>
+			<!--<file>unit-tests/CacheResultsetTest.php</file> -->
+
 			<file>unit-tests/DbTest.php</file>
 			<!--<file>unit-tests/DbDescribeTest.php</file>-->
 			<file>unit-tests/DbDialectTest.php</file>
@@ -45,7 +48,6 @@
 			<file>unit-tests/ModelsMetadataAdaptersTest.php</file>
 			<!-- <file>unit-tests/ModelsQueryTest.php</file>
 
-			<file>unit-tests/ModelsResultsetCacheTest.php</file>
 			<file>unit-tests/ModelsTransactionsTest.php</file>
 
 			<file>unit-tests/ViewTest.php</file>
@@ -57,11 +59,10 @@
 			<file>unit-tests/TagTest.php</file>
 			<file>unit-tests/AclTest.php</file>
 
-			<file>unit-tests/CacheTest.php</file>
-			<file>unit-tests/CacheResultsetTest.php</file>
-
 			<file>unit-tests/PaginatorTest.php</file>
-			<file>unit-tests/TranslateTest.php</file>-->
+			<file>unit-tests/TranslateTest.php</file>
+
+			<file>unit-tests/ModelsResultsetCacheTest.php</file>-->
 		</testsuite>
 	</testsuites>
 </phpunit>
